# SkyStack

./: .env.example  README.md  index.html  package-lock.json  package.json  readme.md  vite.config.js
Final 1st Architecture/: .dockerignore  Dockerfile  package-lock.json  package.json  readme.md  server.js
Final 1st Architecture/converter/: CMakeLists.txt
Final 1st Architecture/converter/src/: main.cpp
Final 1st Architecture/frontend/: index.html  script.js  style.css
on-the-fly-processor/: api.Dockerfile  docker-compose.yml  readme.md  setup.Dockerfile
on-the-fly-processor/aws-init/: init-lambda.sh  init_aws.py  upload_data.py
on-the-fly-processor/processor_lambda/: app.py
on-the-fly-processor/src/api/: main.py  requirements.txt
on-the-fly-processor/src/common/: schemas.py
on-the-fly-processor/src/receiver_lambda/: app.py  requirements.txt
on-the-fly-processor/src/translator_lambda/: app.py  requirements.txt
src/: App.jsx  index.css
src/components/: Footer.jsx  Navbar.jsx
src/components/GeoTIFF/: BandCard.jsx  BandManager.jsx  FolderBandManager.jsx  FolderStructure.jsx
src/components/Map/: MapComponent.jsx  MapControls.jsx  MapOverlays.jsx
src/components/Sidebar/: Sidebar.jsx  SidebarTabs.jsx
src/components/Sidebar/TabContent/: BandsTab.jsx  (+6 more)
src/components/UI/: ErrorMessage.jsx  FileUpload.jsx  LoadingSpinner.jsx
src/hooks/: useBasemaps.js  useGeoTIFF.js  useMap.js
src/pages/: DataConversion.jsx  GeoTiffDisplay.jsx  OnTheFly.jsx  Overview.jsx
src/services/: api.js
src/utils/: colorMaps.js  constants.js  geotiffProcessor.js
